# TransE.torch

./: README.md  main.py  model.py  pyproject.toml
